# libminiball

./: .gitmodules
miniball/: CMakeLists.txt  adapter.hpp  miniball  miniball.cpp  miniball.hpp
